# advent-of-code

./: .gitignore  Cargo.toml
aoc_function_registry/: Cargo.toml
aoc_function_registry/src/: lib.rs
aoc_macros/: Cargo.toml
aoc_macros/src/: lib.rs
aoc_module_loader/: Cargo.toml
aoc_module_loader/src/: lib.rs
aoc_proc_macros/: Cargo.toml
aoc_proc_macros/src/: lib.rs
aoc_shared_functions/: Cargo.toml
aoc_shared_functions/src/: lib.rs
src/: main.rs
src/2023/: .gitkeep
src/2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
templates/: day.rs.tpl
