[package]
name = "aoc"
version = "0.0.1"
authors = ["Tom Udding <tomudding@users.noreply.github.com>"]
edition = "2021"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
aoc_function_registry = { path = "./aoc_function_registry" }
aoc_proc_macros = { path = "aoc_proc_macros" }
chrono = "0.4.38"
