[package]
name = "aoc"
version = "0.0.1"
authors = ["Tom Udding <tomudding@users.noreply.github.com>"]
edition = "2021"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
aoc_shared_functions = { path = "./aoc_shared_functions" }
aoc_proc_macros = { path = "./aoc_proc_macros" }
chrono = "0.4.38"

# For the actual puzzles:
regex = "1.11.1"
