[package]
name = "aoc"
version = "0.0.2"
authors = ["Tom Udding <tomudding@users.noreply.github.com>"]
edition = "2024"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
aoc_shared_functions = { path = "./aoc_shared_functions" }
aoc_proc_macros = { path = "./aoc_proc_macros" }
chrono = "0.4.38"

# For the actual puzzles:
# 2024 - 03:
regex = "1.11.1"

# 2024 - 13:
# 2025 - 10:
# Also required: sudo apt-get install coinor-cbc coinor-libcbc-dev
good_lp = "1.10.0"
